--- a/blocks/content-intro/content-intro.css
+++ b/blocks/content-intro/content-intro.css
@@ -1,12 +1,6 @@
 /* Section - Content Intro */
-main .section.content-intro-container > .content-intro-wrapper {
-  padding-top: var(--spacer-layout-06);
-  padding-bottom: var(--spacer-layout-06);
-}
-
-/* Section - Content Intro with Linkable Cards */
-main .section.content-intro-container.linkable-cards-container > .content-intro-wrapper {
-  padding-bottom: var(--spacer-layout-04);
+main .section.content-intro-container > .content-intro-wrapper + [class*="wrapper"] {
+  margin-top: var(--spacer-layout-04);
 }
 
 /* Block - Content Intro */
@@ -175,19 +169,6 @@ main .section.content-intro-container.linkable-cards-container > .content-intro-
 
 /* Desktop */
 @media only screen and (min-width: 1200px) {
-  /* Section - Content Intro */
-  main .section.content-intro-container > .content-intro-wrapper {
-    padding-top: var(--spacer-layout-07);
-    padding-bottom: var(--spacer-layout-07);
-  }
-
-  /* Section - Content Intro with Columns or Content */
-  main .section.content-intro-container.columns-container > .content-intro-wrapper,
-  main .section.content-intro-container.content-container > .content-intro-wrapper {
-    padding-top: var(--spacer-layout-07);
-    padding-bottom: var(--spacer-layout-06);
-  }
-
   /* Block - Content Intro */
   .content-intro .content-intro__inner {
     display: flex;
